2017-03-13  Gerrit Holl  <g.heoll@reading.ac.uk>

	* typhon/datasets/tovs.py(HIRS.as_xarray_dataset):

	Convert ints to floats so that I can use nans for masking, as xarray
	does not support masking otherwise.

	* typhon/physics/units/em.py(SRF.estimate_band_coefficients):

	- Use band coefficients from file for now, ad-hoc solution.

	* typhon/physics/units/tools.py(UnitsAwareDataArray):

	- Do not attempt to transfer units for ufuncs that return a boolean,
	like isfinite.

2017-03-10  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/utils/__init__.py:

	(Timer): Fixed docstring example.

	(print_timing): Added decorator for convenient function benchmarking.

	* doc/typhon.utils.rst: Added `print_timing` to docs.

2017-03-09  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/atmosphere.py (relative_humidty):

	Calculate relative humidity for given VMR, pressure and temperature.

	* doc/typhon.atmosphere.rst: Added `relative_humidity` to docs.

2017-03-08  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/_tovs_defs.py:

	- Change complevel to 4 as tests show that it gets much slower, but
	not much faster, at higher complevels

	- Fix typo in two field names

	* typhon/physics/metrology.py: Correct docstring

	* typhon/physics/units/em.py(SRF.as_dataarray): Added method to
	convert SRF to a data array (NB: using regular DataArray, not
	UnitAwareDataArray, because I have no way of keeping track of units on
	coordinates in UnitAwareDataArray at the moment).

2017-03-06  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/xml/__init__.py: Simplified code around if-conditions.

2017-03-06  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/physics/units/tools.py(UncertaintyAwareDataArray.to):

	Bugfix, adapt signature for contexts to the one used by pint, such
	that it works when the number of contexts given is not exactly one.

2017-03-06  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/xml/__init__.py:
