@@ -1,3 +1,15 @@
+2017-03-13  Lukas Kluft  <lukas.kluft@gmail.com>
+
+	* typhon/utils/__init__.py (print_timing):
+
+	The decorator preserves the original function signature and docstrings.
+
+	* typhon/atmosphere.py (vmr):
+
+	Calculate VMR for given relative humidity, pressure and temperature.
+
+	* doc/typhon.atmosphere.rst: Added `vmr` to documentation.
+
 2017-03-13  Gerrit Holl  <g.heoll@reading.ac.uk>
 
 	* typhon/datasets/tovs.py(HIRS.as_xarray_dataset):
